Fix button borders that were looking blurry
* Use darker color for button border

--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ a {
 }
 
 .navigation a {
-  border: 1px solid rgba(49, 55, 199, 0.48);
+  border: 1px solid rgba(0, 5, 121, 0.8);
   text-decoration: none;
   border-radius: 5px;
   display: block;
